# hypview

./: .gitignore  BUGS  Makefile.am  Makefile.common  NEWS  README  READPDF.txt  autogen.sh  capture.c  configure.ac  missing
gtk/: .gitignore  Makefile.am  autoloc.c  gdkkeysyms.h  gfilesel.c  gtk_comp.h  hcp_opts.c  hv_about.c  hv_asc.c  hv_autol.c  hv_bin.c  hv_block.c  hv_click.c  hv_curs.c  hv_disp.c  hv_eref.c  hv_error.c  hv_file.c  hv_fixme.c  hv_font.c  hv_fsel.c  hv_gfx.c  hv_globl.c  hv_gtk.h  hv_help.c  hv_hfind.c  hv_hist.c  hv_info.c  hv_init.c  hv_main.c  hv_mark.c  hv_misc.c  hv_nav.c  hv_popup.c  hv_prefs.c  hv_rcomp.c  hv_recomp.c  hv_rsc.c  hv_srch.c  hv_tbar.c  (+6 more)
hpdf/demo/: .gitignore  Makefile.am  arc_demo.c  attach.c  character_map.c  chfont_demo.c  chunk_background.c  encoding_list.c  encryption.c  ext_gstate_demo.c  font_demo.c  font_demo.cpp  grid_sheet.c  image_demo.c  jpeg_demo.c  jpfont_demo.c  line_demo.c  link_annotation.c  make_rawimage.c  outline_demo.c  outline_demo_jp.c  permission.c  png_demo.c  raw_image_demo.c  slide_show_demo.c  text_annotation.c  text_demo.c  text_demo2.c  ttfont_demo.c  ttfont_demo_jp.c
hpdf/src/: 3dmeasur.c  Makefile.am  annotat.c  array.c  binary.c  boolean.c  catalog.c  destinat.c  dict.c  doc.c  doc_png.c  enc_cns.c  enc_cnt.c  enc_jp.c  enc_kr.c  enc_utf8.c  encoder.c  encrypt.c  encryptd.c  error.c  exdata.c  extgstat.c  font.c  font_cid.c  font_t1.c  font_tt.c  fontdb14.c  fontdcid.c  fontdcns.c  fontdcnt.c  fontdef.c  fontdjp.c  fontdkr.c  fontdt1.c  fontdtt.c  gstate.c  hpdf_3dmeasure.c  hpdf_annotation.c  hpdf_array.c  hpdf_binary.c  (+74 more)
hyp/: .gitignore  Makefile.am  README  ash.icn  base64.c  block.c  bm.c  bm.h  bmp2gif.c  bmp2img.c  cache.c  casefold.h  cgi.c  cgic.c  cgic.h  cgirsc.c  cgirsc.h  cp_1250.h  cp_1251.h  cp_1252.h  cp_1253.h  cp_1254.h  cp_1255.h  cp_1256.h  cp_1257.h  cp_1258.h  cp_850.h  cp_atari.h  cp_binary.h  cp_latin1.h  cp_latin2.h  cp_mac.h  cp_st_ru.h  csetname.c  dumpicon.c  ext_refs.c  genmaptab.c  gfx.s  gif2bmp.c  gunichar.h  (+101 more)
hyp/color/: chip02.img  chip03.img  thing16.img  title3.img
hyp/tos/: cookie.c  hypmain.c  malloc.c  mkdir.c  spawn.c
hyp/unix/: malloc.c  spawn.c
hyp/win32/: hypmain.c  spawn.c
icons/: Makefile.am  back.h  back.icn  bookmark.h  bookmark.icn  catalog.h  catalog.icn  first.h  first.icn  help.h  help.icn  history.h  history.icn  home.h  home.icn  hypview.h  hypview.icn  hypview.xpm  iback.icn  icatalog.icn  ifirst.icn  ihelp.icn  iindex.icn  iinfo.icn  ilast.icn  iload.icn  index.h  index.icn  inext.icn  inextphy.icn  info.h  info.icn  iprev.icn  iprevphy.icn  itoc.icn  ixref.icn  katalog.h  last.h  last.icn  load.h  (+18 more)
icons/gtk/: about.h  close.h  color.h  copy.h  cut.h  find.h  font.h  help.h  index.h  paste.h  prefs.h  print.h  quit.h  selall.h
include/: Makefile.am  base64.h  gtk_comp.h  hcp.h  hcp_opts.h  hobstack.h  htmlhelp.h  hv_ascii.h  hv_defs.h  hv_gtk.h  hv_vers.h  hyp.h  hypcfg.h  hypdebug.h  hypdefs.h  hypdoc.h  hypintl.h  hypmain.h  hypmem.h  kwset.h  localename.h  pattern.h  picture.h  portab.h  profile.h  stat_.h  string_.h  time_.h  windows_.h  xgetopt.h
include/tos/: av.h  bgh.h  bubble.h  cookie.h  dhst.h  diallib.h  dl_user.h  dragdrop.h  gem.h  gscript.h  magx.h  mem.h  mygem.h  nogem.h  olga.h  pchelp.h  scancode.h  seproto.h  ssp.h  viewprot.h  xacc.h  xattr.h  xrsrc.h
libpng/: Makefile.am  png.c  png.h  pngconf.h  pngerror.c  pnglibconf.h  pngmem.c  pngpriv.h  pngread.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtrans.c  pngwrite.c  pngwtran.c  pngwutil.c
macos/: .gitignore  Info.plist  Makefile.am  autoloc.m  hcp_opts.m  hv_about.m  hv_asc.m  hv_autol.m  hv_bin.m  hv_block.m  hv_curs.m  hv_defs.h  hv_disp.m  hv_eref.m  hv_error.m  hv_file.m  hv_font.m  hv_fsel.m  hv_gfx.m  hv_help.m  hv_hfind.m  hv_info.m  hv_init.m  hv_main.m  hv_mark.m  hv_misc.m  hv_nav.m  hv_popup.m  hv_prefs.m  hv_rcomp.m  hv_recomp.m  hv_rsc.m  hv_selec.m  hv_srch.m  hv_tbar.m  hv_win.m  hypview.icns  pixbuf.c  pixbuf.h  pixdata.c  (+2 more)
macos/hypview.xcodeproj/: project.pbxproj
pic/: Makefile.am  bmp.c  degas.c  gif.c  icn.c  ico.c  iff.c  imagic.c  img.c  piccolor.c  picconv.c  pictools.c  png.c  stad.c
po/: cs.po  (+7 more)
potools/: Makefile.am  molist.c  po2rc.c  polinguas.c
rsc/: Makefile.am
rsc/aes/: Makefile.am  aes.c  aes.h  aesdefs.h  aesutils.c  crysbind.h  gem_rsc.c  gem_rsc.h  gem_rsc.rsc  gem_rsc.rsh  gem_rsc.rso  gemaplib.c  gembase.c  gemctrl.c  gemdos.c  gemevlib.c  gemfmalt.c  gemfmlib.c  gemfslib.c  gemglobe.c  gemgraf.c  gemgrlib.c  gemgsxif.c  geminit.c  geminput.c  gemlib.h  gemmnlib.c  gemobed.c  gemobjop.c  gemoblib.c  gempd.c  gempd.h  gemrslib.c  gemsclib.c  gemshlib.c  gemwmlib.c  gemwrect.c  gsxdefs.h  struct.h
rsc/data/: README  fnt_gr_6x8.c  fnt_gr_8x16.c  fnt_gr_8x8.c  (+12 more)
tos/: .gitignore  Makefile.am  all.prj  autoloc.c  dbgwin.c  dbgwin.h  dirent.c  dl_apinf.c  dl_avcmd.c  dl_bubbl.c  dl_dhst.c  dl_dial.c  dl_drag.c  dl_event.c  dl_filsl.c  dl_fonsl.c  dl_help.c  dl_init.c  dl_items.c  dl_ledit.c  dl_mem.c  dl_menu.c  dl_msgs.c  dl_popup.c  dl_routs.c  dl_tools.c  dl_user.c  dl_user.s  dl_win.c  gif2bmp.prj  gscript.c  hcp.prj  help_rc.prj  hpdf.prj  hv_asc.c  hv_autol.c  hv_bin.c  hv_block.c  hv_click.c  hv_color.c  (+48 more)
win32/: Makefile.am  autoloc.c  hcp_opts.c  hv_about.c  hv_asc.c  hv_autol.c  hv_bin.c  hv_block.c  hv_click.c  hv_curs.c  hv_defs.h  hv_disp.c  hv_eref.c  hv_error.c  hv_file.c  hv_font.c  hv_fsel.c  hv_gfx.c  hv_globl.c  hv_help.c  hv_hfind.c  hv_hist.c  hv_info.c  hv_init.c  hv_main.c  hv_mark.c  hv_misc.c  hv_nav.c  hv_popup.c  hv_prefs.c  hv_rcomp.c  hv_recomp.c  hv_rsc.c  hv_selec.c  hv_srch.c  hv_tbar.c  hv_tree.c  hv_treeview.c  hv_user.c  hv_win.c  (+11 more)
zlib/: Makefile.am  adler32.c  compress.c  crc32.c  crc32.h  crypt.h  dbgmem.h  deflate.c  deflate.h  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  ioapi.c  ioapi.h  iowin32.c  makecrc.c  trees.c  uncompr.c  unzip.c  unzip.h  zconf.h  zip.c  zip.h  zlib.h  zutil.c  zutil.h
(+680 files in other folders)
